# my-zephyr-workspace

./: .gitignore  .gitmodules  runDocker.sh
adafruit_feather_stm32f405-triggerfast/: CMakeLists.txt
esp32-blinky/: CMakeLists.txt
esp32-display/: CMakeLists.txt
nucleo_f767zi-adafruit_2_8_tft_touch_v2-lvgl/: CMakeLists.txt
nucleo_f767zi-irsend/: CMakeLists.txt
nucleo_f767zi-irsend/libs/IRremote-9d9b1e1f9b1b/: IRremote.cpp  IRremote.h  IRremoteInt.h  irSend.cpp  ir_Sanyo.cpp
projects/adafruit_feather_nrf52840-blinky/: CMakeLists.txt
projects/adafruit_feather_stm32f405-ssd1306_128x64-lvgl/: CMakeLists.txt  adafruit_feather_stm32f405.overlay  prj.conf
projects/adafruit_feather_stm32f405-ssd1306_128x64-lvgl/src/: main.c
projects/esp32-display/: CMakeLists.txt  prj.conf
projects/esp32-hello_world/: CMakeLists.txt
projects/esp32-spi-lvgl/: CMakeLists.txt  esp32.overlay  prj.conf
projects/esp32-ssd1306_128x32-lvgl/: CMakeLists.txt  Kconfig  esp32.overlay  prj.conf
projects/nrf52840dongle_nrf52840/: CMakeLists.txt  scrip.sh
projects/nucleo_f767zi/: CMakeLists.txt  my_f767zi.overlay  prj.conf
projects/nucleo_f767zi-irsend/: CMakeLists.txt
projects/nucleo_f767zi-ssd1306_128x64-lvgl/: CMakeLists.txt
projects/nucleo_f767zi/boards/arm/my_f767zi/: Kconfig.board
projects/nucleo_f767zi/src/: main.c  main.cpp
projects/nucleo_h745zi_q/: CMakeLists.txt  nucleo_h745zi_q_m7.overlay  prj.conf
projects/nucleo_h745zi_q/boards/arm/my_f767zi/: Kconfig.defconfig  my_f767zi.yaml
projects/nucleo_h745zi_q/src/: main.cpp
projects/nucleo_l432kc-ssd1306_128x32-lvgl/: nucleo_l432kc.overlay
rail@h745zi/: CMakeLists.txt  nucleo_f767zi.overlay  nucleo_h745zi_q_m7.overlay  prj.conf
rail@h745zi/src/: Display.cpp  Display.h  GyroWaiter.cpp  GyroWaiter.h  Log.h  Rail.cpp  Rail.h  Stepper.cpp  Stepper.h  main.cpp
railv1/: nucleo_h745zi_q_m7.overlay
railv1/src/: Controller.h  Model.h  Stepper.cpp  View.h
railv2/: prj.conf
railv2/src/: Controller.cpp  Controller.h  Display.cpp  Display.h  GPIOs.cpp  GPIOs.h  Model.cpp  Model.h  Stepper.cpp  Stepper.h  View.cpp  View.h  main.cpp
railv2b/: nucleo_f767zi.overlay  nucleo_h745zi_q_m7.overlay
railv2b/src/: Controller.cpp  IrSony.cpp  IrSony.h  Model.cpp  Model.h  Stepper.cpp  Stepper.h  StepperWithTarget.cpp  StepperWithTarget.h  View.cpp
railv3/: CMakeLists.txt  nucleo_f767zi.overlay  nucleo_h745zi_q_m7.overlay  prj.conf
railv3/src/: Controller.cpp  Controller.h  Display.cpp  Display.h  GyroWaiter.cpp  GyroWaiter.h  IrSony.cpp  IrSony.h  Model.cpp  Model.h  Stepper.cpp  Stepper.h  StepperWithTarget.cpp  StepperWithTarget.h  View.cpp  View.h  main.cpp
(+29 files in other folders)
